--- a/bot.ipynb
+++ b/bot.ipynb
@@ -47,12 +47,11 @@
     "security_price = security_price.text.strip()\n",
     "todays_change = soup.find('span', attrs= {'class':'absolute-value'})\n",
     "todays_change = todays_change.text.strip()\n",
-    "phone_number = \"+919845042109\"\n",
+    "phone_number = \"+919740979450\"\n",
     "print(security_name)\n",
     "print(security_price)\n",
     "print(todays_change)\n",
-    "kit.sendwhatmsg(phone_number, \"Today's price for \" + security_name + \" is ₹\" + security_price + \". It has moved a mere \" + todays_change + \" points since the markets opened.\", 21, 41)\n",
-    "# kit.sendwhatmsg(\"+918147521449\", \"Good Night\", 20, 29)"
+    "kit.sendwhatmsg(phone_number, \"Today's price for \" + security_name + \" is ₹\" + security_price + \". It has moved a mere \" + todays_change + \" points since the markets opened.\", 21, 41)"
    ]
   }
  ],
